feat: removendo paginacao